[gd_scene load_steps=7 format=2]

[ext_resource path="res://gui/ingame_gui.gd" type="Script" id=1]
[ext_resource path="res://gui/enemy_indicator.tscn" type="PackedScene" id=2]
[ext_resource path="res://gui/armor_indicator.tscn" type="PackedScene" id=3]
[ext_resource path="res://gui/pause_menu.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/RobotY.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]

size = 16
use_mipmaps = false
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="ingame_gui" type="CanvasLayer" index="0"]

pause_mode = 2
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 2, 2 )
transform = Transform2D( 2, 0, 0, 2, 0, 0 )
script = ExtResource( 1 )

[node name="enemy_indicator" parent="." index="0" instance=ExtResource( 2 )]

position = Vector2( 606, 326.5 )

[node name="armor_indicator" parent="." index="1" instance=ExtResource( 3 )]

position = Vector2( 32, 34 )

[node name="pause_menu" parent="." index="2" instance=ExtResource( 4 )]

margin_left = -540.0
margin_top = -332.0
margin_right = -500.0
margin_bottom = -292.0

[node name="ApplePoints" type="Label" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 518.0
margin_top = 16.0
margin_right = 886.0
margin_bottom = 67.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Apple Score: 0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]


